--- a/desafios-guanabara/mini-projeto2/estilo/style.css
+++ b/desafios-guanabara/mini-projeto2/estilo/style.css
@@ -45,6 +45,10 @@ header a, footer a {
     font-weight: bolder;
 }
 
+header a:hover, footer a:hover {
+    text-decoration: underline;
+}
+
 section {
     padding-top: 10vh;
     padding-bottom: 10vh;
@@ -54,9 +58,11 @@ section {
     font-size: 3.5vw;
 }
 
-header a:hover, footer a:hover {
-    text-decoration: underline;
+section > p {
+    padding-bottom: 2em;
 }
+
+
 
 section.normal {
     background-color: white;
@@ -66,13 +72,28 @@ section.normal {
 section.imagem {
     background-color: rgb(43, 43, 43);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
 
+}
+
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+    
+}
+
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
+    
 }
 
 footer {
